fix: change margins on main grid element to enhance design and visibility

--- a/src/components/Banner/banner.module.css
+++ b/src/components/Banner/banner.module.css
@@ -3,7 +3,6 @@
   width: 100vw;
   height: 750px;
   position: relative;
-  margin-bottom: 100px;
 }
 
 .bannerContainer {
